# mcp-runbook

./: .gitignore  flake.nix  pyproject.toml
docs/: Function-Factory-Decorator.md  Runbook-Specs.md  Tasks.md  notes.org
examples/: sample-runbook.yaml  sample_server.py
scripts/: start-server.sh
src/: main.py  models.py  parser.py  server.py
src/mcp_runbook/: __init__.py  main.py  models.py  parser.py  server.py
test/: test_main.py  test_parser.py  test_server.py
test/data/: invalid.yaml  sample-runbook.yaml  valid.yaml
