[project]
name = "mcp-server-runbook"
version = "0.1.0"
description = "A helper tools to config Runbook for MCP Client to run"
readme = "README.md" # Optional: create a README.md file
requires-python = ">=3.12"
license = { text = "MIT" } # Optional: choose a license

authors = [
  { name = "Ralph Tran", email = "ralphtran.sg@gmail.com" },
]

keywords = ["mcp", "mcp-server", "runbook", "builder"] # Optional

dependencies = [
    "pyyaml", # For parsing the input YAML data
    "pydantic>=2.0", # For model validation
    "keyring", # For managing secrets # To use official mcp sdk
    "mcp[cli]>=1.9.2", # For mcp server sdk
    "jinja2>=3.0.0", # For templating the command with parameters
]

[project.optional-dependencies]
dev = [
    "pip>=23.0",
    "pytest>=8.1.1",  
    "pytest-cov",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.12.1",
]

# Example: Add a console script entry point if you build a CLI tool
[project.scripts]
mcp-runbook = "src.main:main"

# Configuration for tools like Black
[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = [
    "-v",               
    "--cov=src",        
    "--cov-report=term" 
]
testpaths = ["test"]
